Change build to tf 2.16.1 (#1977)
* Change build to tf 2.16.1

* Patch tensorflow to avoid cython error

* Update to 3.12

* Update 3.12 for arm64

* Fix WORKSPACE

--- a/.github/workflows/build.arm64.yml
+++ b/.github/workflows/build.arm64.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: macos-13-xlarge
     strategy:
       matrix:
-        python: ['3.9', '3.10', '3.11']
+        python: ['3.9', '3.10', '3.11', '3.12']
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       - uses: actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935 # v4.1.1
@@ -85,12 +85,17 @@ jobs:
         with: 
           name: macOS-arm64-3.11-wheel 
           path: macOS-arm64-3.11-wheel
+      - uses: actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935 # v4.1.1
+        with: 
+          name: macOS-arm64-3.12-wheel 
+          path: macOS-arm64-3.12-wheel
       - run: |
           set -e -x
           mkdir -p wheelhouse
           cp macOS-arm64-3.9-wheel/*.whl wheelhouse/
           cp macOS-arm64-3.10-wheel/*.whl wheelhouse/
           cp macOS-arm64-3.11-wheel/*.whl wheelhouse/
+          cp macOS-arm64-3.12-wheel/*.whl wheelhouse/
           ls -la wheelhouse/
           sha256sum wheelhouse/*.whl
       - uses: actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
